# Gold-Band

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.en.md  README.md  README.zh-CN.md  package-lock.json  package.json  release-please-config.json
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/skills/deep-interview/: SKILL.md
.claude/skills/maling-deep-interview/: SKILL.md
.claude/skills/session-scroll-pagination/: SKILL.md
.github/workflows/: release-please.yml  release.yml  semantic-pr.yml
.gold-band/presets/profiles/: developer.md  planner.md  tester.md  verifier.md
.gold-band/tasks/task-001/: task.json
Archive/: TASK.md  ralph.sh
configs/: app-config.json  app-config.toml
configs/channels/: default.json  wb.json
docs/: 待办项.md
docs/gold-band/: README.md  dynamic-worker-bus-events.md  fix-token-metrics-reporting.md  observability-bus-design.md
docs/gold-band/dsl/: control.md  overview.md
docs/gold-band/interaction/: cli.md  overview.md  progress.md
docs/gold-band/product/: overview.md
docs/gold-band/provider/: adapter.md  invocation.md  prompt-bundle.md  worker-ref.md
docs/gold-band/runtime/: control.md  layout.md  overview.md
docs/gold-band/产品设计文档/: MCP-SKILL管理-完整设计方案.md  README.md  sqlite-index.md
docs/gold-band/开发计划/: console-tui-implementation-plan.md  gold-band-mvp-plan.md  功能点todo列表.md  可观测性plan.md  方案与实现不一致审阅.md
docs/gold-band/测试问题/: ACP会话优化计划.md  性能优化计划.md  测试问题.md
docs/gold-band/竞品差异/: agency-orchestrator-对比矩阵.md
docs/需求/: Gold-Band-SKILL-多Agent管理改进-任务文档.md  MCP-SKILL-运行时传递链路修复-task.md
plan/: gold-band-mvp-plan.md
scripts/: build-channel.mjs  channel-config.mjs  dev-channel.mjs  generate-updater-json.mjs
src/: dynamic.rs  helpers.rs  lib.rs  main.rs  process.rs  prompts.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: builtin_mcp.rs  channel.rs  commands.rs  commands_conversation.rs  i18n.rs  main.rs  metrics.rs  notifications.rs  state.rs  updater.rs  view_models.rs  view_models_conversation.rs
src/acp/: adapter.rs  client.rs  elicitation.rs  events.rs  mod.rs  permission.rs
src/app/: ids.rs  mod.rs  node_executor.rs  notification.rs  observability.rs  orchestrator.rs  profile_resolver.rs  profiles.rs  state_access.rs  state_factory.rs  transition_context.rs
src/artifacts/: mod.rs
src/cli/: mod.rs
src/command/: execute.rs  mod.rs
src/config/: mod.rs
src/console/: commands.rs  controller.rs  mod.rs  state.rs  theme.rs  view_models.rs
src/control/: mod.rs
src/domain/: mod.rs
src/dsl/: mod.rs
src/exec/: layout.rs  mod.rs
src/inspect/: mod.rs
src/mcp/: mod.rs
src/observability/: mod.rs
src/prompts/: accept.md  clean.md  test.md
src/provider/: mod.rs
src/runtime/: mod.rs
src/skill/: mod.rs  symlink.rs
src/storage/: mod.rs  sqlite.rs
tests/: acceptance_loop_and_commands.rs  ai_dynamic_node.rs  authoring_workflow.rs  console_explorer_and_artifacts.rs  console_help_and_history.rs  console_parser.rs  control_engine.rs  delete_profile_debug.rs  dsl_validation.rs  entity_uuid_test.rs  full_mvp_flow.rs  provider_output_priority.rs  provider_prompt_bundle.rs  runtime_layout.rs  session_token_integration_test.rs  unicode_timeline_transition.rs  worker_bootstrap.rs  worker_exec_happy_path.rs  worker_happy_path.rs
web/: tsconfig.json  vitest.config.ts
web/src/: App.tsx  api.test.ts  api.ts  i18n.ts  main.tsx  mockData.ts  routes.ts  styles.css  theme.ts  types.ts
web/src/api/: browser.test.ts  browser.ts  browserState.test.ts  browserState.ts  client.test.ts  client.ts  desktop.test.ts  desktop.ts  shared.ts
web/src/components/: AppTitleBar.tsx  Breadcrumbs.tsx  DetailViewer.tsx  EntitySection.tsx  GraphView.tsx  McpServerCard.tsx  PageScaffold.tsx  RequirementDisclosure.tsx  Shell.tsx  StartupSplash.tsx  WorkflowEditor.tsx  workflowGraph.ts
web/src/hooks/: useInterventionNotifications.ts
web/src/lib/: acp-live-flush.ts  acp-runtime-composer-state.ts  acp-session-assets-panel.ts  acp-session-config.ts  acp-session-shell.ts  artifact-markdown-pref.ts  asset-preview.ts  attachment-service.ts  attachments.ts  conversation-composer-draft.ts  conversation-run-snapshot.ts  conversation-runtime-workflow.ts  conversation-session-assets.ts  conversation-session-follow.ts  nodes.ts  portal-container.ts  run-mode-validation.ts  status.ts  ui-error-diagnostics.ts  window-controls.ts
web/src/pages/: AgentManagementPage.tsx  ContextManagementPage.tsx  ConversationHomePage.tsx  ConversationRunPage.tsx  RoundDetailPage.tsx  RunDetailPage.tsx  RunModeManagementPage.tsx  SettingsPage.tsx  TaskListPage.tsx  WorkflowPage.tsx  WorkspaceSelectPage.tsx
web/tests/: acp-chat-events.test.ts  acp-live-flush.test.ts  acp-runtime-composer-state.test.ts  acp-session-assets-panel.test.ts  acp-session-config.test.ts  acp-session-metadata.test.ts  acp-session-shell.test.ts  api.test.ts  app-title-bar.test.ts  app-window-shell-style.test.ts  artifact-markdown-pref.test.ts  asset-preview.test.ts  conversation-composer-draft.test.ts  conversation-composer-workspace.test.ts  conversation-run-snapshot.test.ts  conversation-runtime-workflow.test.ts  conversation-session-assets.test.ts  conversation-session-follow.test.ts  conversation-sidebar-selection.test.ts  prompt-input-action.test.ts  round-detail-system-prompt.test.ts  run-mode-validation.test.ts  ui-button-ref.test.ts  ui-error-diagnostics.test.ts  window-controls.test.ts  workflowGraph.performance.test.ts
web/tests/acp/: ACPChatDialog.indexing.test.ts  (+4 more)
(+413 files in other folders)
