[package]
name = "gold-band"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3"
