[package]
name = "gold-band"
version = "0.4.0"
edition = "2024"
license = "AGPL-3.0-only"

[workspace]
members = ["src-tauri"]
resolver = "3"

[dependencies]
agent-client-protocol = "0.11.1"
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = { version = "0.15", default-features = false, features = ["toml"] }
serde_path_to_error = "0.1"
schemars = { version = "0.8", features = ["derive"] }
jsonschema = { version = "0.17", default-features = false }
minijinja = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "fs", "io-util"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ratatui = "0.29"
crossterm = "0.28"
figlet-rs = "1.0.0"
rusqlite = { version = "0.34", features = ["bundled"] }
atomic-write-file = "0.2"

[dev-dependencies]
tempfile = "3"
