[package]
name = "gold-band-desktop"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-only"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
gold-band = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fontdb = "0.23"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["time"] }
url = "2"
