[package]
name = "gold-band-desktop"
version = "0.4.0"
edition = "2024"
license = "AGPL-3.0-only"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
gold-band = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fontdb = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls-vendored"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
open = "5"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
notify-rust = "4"
tokio = { version = "1", features = ["time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-winrt-notification = "0.7"
