[package]
name = "gold-band-desktop"
version = "0.5.0"
edition = "2024"
license = "AGPL-3.0-only"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-build = { version = "2", features = [] }
url = "2"

[dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
gold-band = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fontdb = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls-vendored"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
open = "5"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["time"] }
trash = "5"
url = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
base64 = "0.22"
# macOS / Linux OS 通知 fallback。
notify-rust = { version = "4", optional = true }

[target.'cfg(windows)'.dependencies]
# Windows Toast 一等公民：干预通知 + 结构化 action（查看详情/忽略）。
tauri-winrt-notification = "0.7"

[features]
default = ["native-notification"]
# 启用 OS 原生通知（Windows Toast 始终可用；macOS/Linux 经 notify-rust）。
native-notification = ["dep:notify-rust"]

